--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+.video{
+   position: absolute;
+   top: 0%;
+   left: 0%;
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   background: url(recursos/loewevideo.mp4); 
+}
