--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    transform: translate(0, 100%);
+    background-color: aquamarine;
+}
+
+.container-1 {
+    position: relative;
+}
+
+.centrar {
+    margin: 0;
+    position: absolute;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+}
+
+#logo {
+    width: 25%;
+}
+
+.embed-responsive-item {
+    width: 100%;
+    height: 100vh;
+    min-width: 100%;
+    min-height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;  
+}
