--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    
 }
-.video{
-   position: absolute;
-   top: 0%;
-   left: 0%;
-   width: 100%;
-   height: 100%;
-   overflow: hidden;
-   background: url(recursos/loewevideo.mp4); 
+
+.body {
+    font-family: 'Playfair Display', serif;
+}
+
+.menu{
+    font-family: 'Inter', sans-serif;
+   
+}
+
+.logo{
+    width: 400px;
+   justify-content: center;
 }
