--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@
     background-color: aquamarine;
 }
 
-.container-1 {
+
+/* .container-1 {
     position: relative;
 }
 
@@ -25,13 +26,25 @@
 
 #logo {
     width: 25%;
+} */
+
+/* .navbar {  
+    background-color: aquamarine;
+} */
+
+#menu {
+    /* background-color: aquamarine; */
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    border-bottom: black 2px solid;
 }
 
 .embed-responsive-item {
     width: 100%;
     height: 100vh;
-    min-width: 100%;
-    min-height: 100vh;
+    /* min-width: 100%;
+    min-height: 100vh; */
     object-fit: cover;
     position: absolute;
     left: 0px;
