--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,13 @@
     background-color: aquamarine;
 }
 
-h1 {
+#perfumes {
     color: rgb(29, 29, 29);
+    font-size: 2em;
+}
+
+.navbar-brand {
+    padding-left: 0.8em;
 }
 
 /* .container-1 {
@@ -40,7 +45,7 @@ h1 {
     /* background-color: aquamarine; */
     display: flex;
     flex-direction: column;
-    border-bottom: rgb(29, 29, 29) 2px solid;
+    border-bottom: rgb(29, 29, 29) 1.5px solid;
     font-size: 0.7em;
 }
 
