--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
     padding-left: 0.8em;
 }
 
+.navbar {
+    max-width: 100vw;
+}
+
 #menu {
     display: flex;
     flex-direction: column;
@@ -41,6 +45,7 @@
 
 .navbar-toggler {
     border: none;
+
 }
 
 .embed-responsive-item {
