--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,16 @@
     top: 0px;
     z-index: -1;  
 }
+
+@media screen and (max-width: 350px) {
+    #perfumes {
+        font-size: 2em;
+        padding-top: 5px;
+    }
+
+    #menu {
+        margin: 0;
+        padding: 0;
+    }
+}
+
