--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,113 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Playfair Display', serif;
+}
+
+
+.logo{
+    width: 400px;
+   justify-content: center;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    transform: translate(0, 100%);
+    background-color: aquamarine;
+}
+
+/*
+.container-1 {
+    position: relative;
+}
+
+.centrar {
+    margin: 0;
+    position: absolute;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+}
+
+#logo {
+    width: 25%;
+} */
+
+
+.slider{
+    position: relative;
+    width: 100%;
+    height: 370px;
+    overflow: hidden;
+    padding: 20px;
+
+}
+
+.card{
+    position: absolute;
+    width: 200px;
+    height: 300px;
+    background-color: #D2D8BE; 
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+    transition: 0.5s;
+    left: calc(50% - 110px);
+    top: 0;
+
+}
+.card > img{
+    width: 100%;
+    height: fit-content;
+}
+.card > h3{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+#next, #prev{
+    position: absolute;
+    top: 40%;
+    color: black;
+    background-color: transparent;
+    border: none;
+    font-size: x-large;
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    left: 60px;
     
 }
 
+#next{
+    left: unset;
+    right: 60px;
+
+}
+
+#best_sellers{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+#best_sellers > img{
+     width: 55%;
+     height: 50%;
+
+}
+
+.text{
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    padding-right: 35px;
+    position: relative;
+    
+}
+.text > h2{
+    font-size: 120px;
+    font-style: bold;
+    
+}
