--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ header {
     background-color: #D2D8BE; 
     border-radius: 10px;
     padding: 10px;
-    transition: all 0.7s ease-in-out;
+    transition: all 0.7s ease-out;
     left: calc(50% - 150px);
     margin-top: 50px;
 }
@@ -98,8 +98,21 @@ header {
 
 .card-1.sale {
     opacity: 1;
-    transition: 1s;
+    transition: 0.5s ease-out;
 }
+
+.card-2.backSale {
+    transform: scale(1.08) rotateZ(-0.1rad);
+    opacity: 0.9 ease-out;
+    filter: grayscale(50%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
+}
+
+.card-2.backSelected {
+    opacity: 1;
+    transition: 0.7s ease-out;
+}
+
+
 
 .carousel-item > img {
     width: 100%;
