--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ header {
 
 .card-2.selected {
     transform: scale(1.08) rotateZ(0.1rad);
-    opacity: 0.9;
+    opacity: 0.9 ease-out;
     filter: grayscale(50%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
 }
 
@@ -107,12 +107,10 @@ header {
     filter: grayscale(50%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
 }
 
-.card-2.backSelected {
+.card-1.backSelected {
     opacity: 1;
     transition: 0.7s ease-out;
 }
-
-
 
 .carousel-item > img {
     width: 100%;
@@ -148,13 +146,20 @@ header {
     .card-2.selected {
         transform: scale(1) rotateZ(0); 
         filter: grayscale(40%); 
+        opacity: 1;
     }
 
     .card-1.sale {
         transform: rotateY(0); 
         filter: blur(1px);
+        &:hover {
+            filter: blur(0px);
+        }
     }
 
+    .card-2.backSale {
+        transform: scale(1) rotateZ(0);
+    }
 }
 
 @media (max-width: 350px) {
@@ -170,6 +175,19 @@ header {
 
     .carousel-item {
         left: 0;
+    }
+
+    .card-1.sale {
+        filter: blur(0);
+    }
+
+    .card-2.backSale {
+        filter: gray;
+        -webkit-filter: grayscale(50%);
+        transition: filter 0.8s ease-in;
+        &:hover {
+            -webkit-filter: grayscale(0%);
+        }
     }
 
 }
