--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,58 @@
     box-sizing: border-box;
     font-family: 'Playfair Display', serif;
     max-width: 100%;
+    scroll-behavior: smooth;
 }
 
 #perfumes {
     color: rgb(29, 29, 29);
     font-size: 4em;
-}
-
-.navbar-brand {
-    padding-left: 0.8em;
+    margin-top: 34px
 }
 
 .navbar {
     max-width: 100vw;
+    padding: 3%;
 }
 
-#menu {
+.blanco2 {
+    background-color: white;
+}
+
+.blancoFijo {
+    background-color: white;
+    transition: 0.6s ease-in;
+    min-width: 100vw;
+    position: fixed;
+    font-size: 1.1em;
+    padding-bottom: 15px;
+    height: 7rem;
+    display: flex;
+    align-items: center;
+    gap: 25px 10px;
+    height: 25%;
+}
+
+.blancoFijoMenu {
+    display: contents;
+    position: absolute;
+}
+
+.mdesplegado {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 10px;
+    top: 0;
+}
+
+.menuestilo {
     display: flex;
     flex-direction: column;
     font-size: 0.7em;
     border-bottom: 1.5px rgb(4, 4, 4) solid;
     width: 90%;
-    margin: 20px 0;
+    margin: auto;
 }
 
 .nav-item {
@@ -46,7 +76,7 @@
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     z-index: -1;  
@@ -54,21 +84,30 @@
 
 header {
     height: 100vh;
+    transition: 0.5s ease;
+}
+
+main {
+    background-color: white;
+    transition: 0.5s ease;
+    border-radius: 15px 15px 0 0;
 }
 
 #sec-carousel {
-    height: 101vh;
     width: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: auto;
+    z-index: 0;
+    height: 100vh;
 }
 
 .carousel-indicators {
-    bottom: 3rem;
+    bottom: 5rem;
     max-width: 250px;
     margin: auto;
+    opacity: 0.3;
 }
 
 .carousel-inner {
@@ -82,23 +121,26 @@ header {
 .carousel-item {
     width: 300px;
     height: 400px;
-    background-color: #D2D8BE; 
+    /* background-color: #d2d8be;  */
     border-radius: 10px;
     padding: 10px;
-    transition: all 0.7s ease-out;
-    left: calc(50% - 150px);
+    transition: all 0.8s ease-out;
+    left: calc(50% - 152px);
     margin-top: 50px;
+    background: linear-gradient(180deg, #e7eace, #d2d8be, #c0e3ac);
+    animation: gradient 15s ease;
 }
 
 .card-2.selected {
     transform: scale(1.08) rotateZ(0.1rad);
-    opacity: 0.9 ease-out;
-    filter: grayscale(50%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
+    opacity: 0.6 ease-in-out;
+    filter: grayscale(60%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
 }
 
 .card-1.sale {
     opacity: 1;
     transition: 0.5s ease-out;
+    filter: drop-shadow(0 0 0.75rem rgb(157, 214, 237));
 }
 
 .card-2.backSale {
@@ -120,6 +162,8 @@ header {
 .carousel-caption {
     top: 320px;
 }
+
+
 
 @media (max-width: 576px) {
     .navbar-nav {
@@ -161,11 +205,26 @@ header {
         transform: scale(1) rotateZ(0);
         filter: drop-shadow(0 0 0rem);
     }
+
+    #perfumes {
+        font-size: 1.5em;
+        padding-right: 0;
+    }
+
+    .navbar {
+        padding-right: 0;
+        justify-content: space-evenly;
+    } 
+    .mdesplegado {
+        padding-left: 0;
+        padding-top: 1em;
+    }  
+    
 }
 
 @media (max-width: 350px) {
     #perfumes {
-        font-size: 2em;
+        font-size: 1.2rem;
         padding-top: 5px;
     }
 
