--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,12 @@
 #perfumes {
     color: rgb(29, 29, 29);
     font-size: 4em;
-    margin-top: 34px
+    margin-top: 4px;
 }
 
 .navbar {
     max-width: 100vw;
-    padding: 3%;
-}
-
-.blanco2 {
-    background-color: white;
+    padding: 0 5%;
 }
 
 .blancoFijo {
@@ -29,7 +25,7 @@
     position: fixed;
     font-size: 1.1em;
     padding-bottom: 15px;
-    height: 7rem;
+    height: 6rem;
     display: flex;
     align-items: center;
     gap: 25px 10px;
@@ -89,8 +85,6 @@ header {
 
 main {
     background-color: white;
-    transition: 0.5s ease;
-    border-radius: 15px 15px 0 0;
 }
 
 #sec-carousel {
@@ -104,7 +98,7 @@ main {
 }
 
 .carousel-indicators {
-    bottom: 5rem;
+    bottom: 6rem;
     max-width: 250px;
     margin: auto;
     opacity: 0.3;
@@ -121,10 +115,9 @@ main {
 .carousel-item {
     width: 300px;
     height: 400px;
-    /* background-color: #d2d8be;  */
     border-radius: 10px;
     padding: 10px;
-    transition: all 0.8s ease-out;
+    transition: all 0.9s ease;
     left: calc(50% - 152px);
     margin-top: 50px;
     background: linear-gradient(180deg, #e7eace, #d2d8be, #c0e3ac);
@@ -139,13 +132,13 @@ main {
 
 .card-1.sale {
     opacity: 1;
-    transition: 0.5s ease-out;
+    transition: 0.6s ease-out;
     filter: drop-shadow(0 0 0.75rem rgb(157, 214, 237));
 }
 
 .card-2.backSale {
     transform: scale(1.08) rotateZ(-0.1rad);
-    opacity: 0.9 ease-out;
+    opacity: 0.9 ease-in-out;
     filter: grayscale(50%) drop-shadow(0 0 0.75rem rgb(208, 237, 157));
 }
 
@@ -163,9 +156,72 @@ main {
     top: 320px;
 }
 
+section {
+    position: sticky;
+    transition: 0.5s ease;
+    border: 1px solid rgb(163, 163, 163);
+    border-radius: 15px 15px 0 0;
+    box-shadow: 5px 10px 24px rgb(207, 245, 137);
+    background-color: white;
+    max-width: 99%;
+    display: flex;
+    justify-content: center;
+    top: 0;
+}
+
+#novedades {
+    z-index: 4;
+    padding: 5px;
+}
+
+#novedades > h1 {
+    font-size: 6em;
+    writing-mode: vertical-lr;
+}
+
+.col-md-4 {
+    width: 20rem;
+    padding-left: 1rem;
+}
+
+.card {
+    overflow: hidden;
+}
+
+.card-title {
+    border: 1px solid grey;
+    border-radius: 25px 25px 25px 25px;
+    font-size: 1.2em;
+    vertical-align: baseline;
+    text-align: center;
+    height: 1.5em;
+    width: 80%;
+    float: left;
+}
+
+.btn {
+    background-color: transparent;
+    color: black;
+    border: none;
+    font-size: 2em;
+    float: right;
+    width: 4rem;
+}
 
 
 @media (max-width: 576px) {
+
+    #novedades {
+        padding-top: 4em;
+    }
+
+    #novedades > h1 {
+        font-size: 2em;
+        writing-mode: horizontal-tb;
+        position: absolute;
+        top: 5px;
+    }
+
     .navbar-nav {
         padding-bottom: 25px;
     }
