--- a/css/style.css
+++ b/css/style.css
@@ -160,13 +160,13 @@ section {
     position: sticky;
     transition: 0.5s ease;
     border: 1px solid rgb(163, 163, 163);
-    border-radius: 15px 15px 0 0;
+    border-radius: 15px;
     box-shadow: 5px 10px 24px rgb(207, 245, 137);
     background-color: white;
     max-width: 99%;
     display: flex;
     justify-content: center;
-    top: 0;
+    top: 6.5rem;
 }
 
 #novedades {
