--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ section {
     transition: 0.5s ease;
     border: 1px solid rgb(163, 163, 163);
     border-radius: 15px;
-    box-shadow: 5px 10px 24px rgb(207, 245, 137);
+    box-shadow: 1px 1px 24px rgb(207, 245, 137);
     background-color: white;
     max-width: 99%;
     display: flex;
@@ -219,8 +219,9 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    padding: 2em 0;
 }
+
 #best_sellers > img{
      width: 60%;
      height: 50%;
@@ -338,6 +339,7 @@ section {
 
 footer {
     height: 40vh;
+    background-color: white;
 }
 
 .miami {
