--- a/css/style-agua.css
+++ b/css/style-agua.css
@@ -5,6 +5,94 @@
     font-family: 'Playfair Display', serif;
 }
 
+.principal > img{
+  width: 100%;
+  z-index: -1;
+}
+.principal > div{
+    position: absolute; top: 60%; left: 70%;;
+    width: 260px;
+    display: block;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    padding: 10px;
+}
+
+.principal > div >h3{
+    font-size: 60px;
+    font-style: bold;
+}
+.principal > div > p{
+    font-size: 20px;
+    font-style: italic;
+    color: grey;
+}
+
+#productos > h2{
+    display: flex;
+    justify-content: center;
+    padding: 60px;
+    font-size: 50px;
+}
+/* Productos */
+
+.col{
+    justify-content: center;
+    align-items: center;
+}
+.col > img{
+    width: 90%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 3px 3px 3px 0 rgba(20, 20, 20, 0.3);
+    margin: 15px;
+}
+.col > figcaption > h4{
+    font-size: 15px;
+    font-style: bold;
+}
+
+.col > figcaption > p{
+    font-size: 13px;
+    color: grey;
+}
+
+.row{
+    flex-wrap: wrap;
+    
+}
+
+.col-8{
+    width: 100%;
+    height: auto;
+
+}
+.col-8 > figcaption > h4{
+    font-size: 15px;
+    font-style: bold;
+}
+
+.col-8 > figcaption > p{
+    font-size: 13px;
+    color: grey;
+}
+
+.col-4{
+    width: 100%;
+    height: auto;
+
+}
+.col-4 > figcaption > h4{
+    font-size: 15px;
+    font-style: bold;
+}
+
+.col-4 > figcaption > p{
+    font-size: 13px;
+    color: grey;
+}
 
 .ap{
     background-color: #D2D8BE;
@@ -48,3 +136,4 @@ ul{
     text-decoration: none;
     list-style: none;
 }
+
