--- a/css/style.css
+++ b/css/style.css
@@ -349,9 +349,49 @@ section {
 
 
 
-footer {
-    height: 40vh;
-    background-color: white;
+/*footer*/
+
+.ap{
+    background-color: #D2D8BE;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    padding: 50px;
+    border-bottom: 1.5px rgb(4, 4, 4) solid;
+}
+.ap > img{
+    width: 130px;
+}
+.contacto{
+    font-size: 16px;
+    color: #283106;
+}
+
+.politicas{
+    background-color: #D2D8BE;
+    padding: 20px;
+}
+.politicas > ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-size: 16px;
+    color: #283106;
+}
+
+.redes{
+    background-color: #283106;
+    color: #D2D8BE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+ul{
+    text-decoration: none;
+    list-style: none;
 }
 
 
