--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,10 @@ ul{
 
 /* PÁGINA PRODUCTO */
 
+.row.gx-4.producto-pag {
+    padding: 0 1rem;
+}
+
 .miami {
     height: 680px;
     display: flex;
@@ -419,30 +423,33 @@ ul{
     border: 1px solid;
     border-radius: 15px;
     margin-top: 2rem;
-    padding-top: 0.3rem;
     /* background-color: #d3ef62; */
 }
 
-.miami > h1 {
-    font-size: 1.5em;
+.miami h1 {
+    font-size: 1em;
     align-self: start;
     padding-bottom: 5px;
-    padding-top: 5px;
+    padding-top: 8px;
+    padding-left: 5px;
+    text-transform: uppercase;
 }
 
 #agua {
-    height: 570px;
-    width: 700px;
+    height: 590px;
+    width: 600px;
     object-fit: cover;
     object-position: 20% 65%;
 }
 
+#compartir {
+    align-self: flex-end;
+    width: 26px;
+    padding-bottom: 6px;
+ }
+
 .text-center {
     margin-top: 2rem;
-}
-
-.espacio {
-    height: 27rem;
 }
 
 .btn-conocer {  
@@ -461,19 +468,24 @@ ul{
     max-width: 510px;
 }
 
-.text-body-secondary > h6 {
-    /* font-family: 'Inter', sans-serif;
+.text-body-secondary h6 {
+    word-spacing: -0.1em;
+    letter-spacing: 0.08em;
+    line-height: 1.5;
+    text-transform: uppercase;
     text-align: justify;
-    word-spacing: -0.005em;
-    letter-spacing: 0.005em; */
-    line-height: 1.4;
+    font-size: 0.8em;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
 }
 
 /* .text-body-secondary p:last-child */
 
 .text-body-secondary h6 em {
-    color: rgb(51, 51, 51);
-
+    color: rgb(161, 161, 161);
+    font-style: normal;
+    word-spacing: inherit;
+    letter-spacing: inherit;
 }
 
 .btn-ingredientes {  
@@ -482,12 +494,11 @@ ul{
     text-align: left;
 }
 
- #compartir {
-    align-self: flex-end;
-    width: 26px;
-    padding-top: 6px;
-    padding-bottom: 6px;
- }
+.btn-cuidados {  
+    font-size: 1.2em;
+    width: 240px;
+    text-align: left;
+}
 
 .enlaces {
     margin-top: 1rem;
@@ -498,13 +509,26 @@ ul{
     text-decoration: none;
     color:rgb(4, 4, 4);
     padding: 1rem;
+    font-size: 20px;
 }
 .enlaces > a > img {
     width: 20px;
     padding-left: 0.2rem;
 }
 
+.espacio {
+    height: 29rem;
+    width: 100%;
+    position: relative;
+}
 
+.thumb {
+    width: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 @media (max-width: 900px) {
 
