--- a/css/style.css
+++ b/css/style.css
@@ -440,13 +440,14 @@ ul{
     height: 590px;
     width: 600px;
     object-fit: cover;
-    object-position: 20% 65%;
+    object-position: 100% 65%;
 }
 
 #compartir {
     align-self: flex-end;
     width: 26px;
     padding-bottom: 6px;
+    padding-right: 0.1rem;
  }
 
 .text-center {
@@ -518,8 +519,7 @@ ul{
 }
 
 .espacio {
-    height: 29rem;
-    width: 100%;
+    height: 29rem;    
     position: relative;
 }
 
@@ -544,6 +544,15 @@ ul{
         font-size: 2em;
         margin-top: 0.7em;
         padding-right: 2rem;
+    }
+
+    #agua {
+        object-position: 40% 65%;
+        transform: scale(1.2);
+    }
+
+    .buitre {
+        overflow: hidden;
     }
 }
 
