--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,47 @@ section {
 }
 
 
+/* NATURALEZA */
+
+.naturaleza {
+    background-image: url(../recursos/LOEWE-naturaleza.webp);
+    width: 100vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+  .naturaleza > div {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: whitesmoke; 
+    opacity: 80%; 
+  }
+
+  .naturaleza > div > h3{
+    font-size: 80px;
+    font-weight: bold;
+  }
+
+  .naturaleza > div > h2{
+    font-size: 40px;
+  }
+
+  .naturaleza > div > p{
+    font-size: 20px;
+  }
+  .naturaleza > div > ul > li > a{
+    font-size: 20px;
+  }
+
+
+
+
 /* NOVEDADES */
 
 #novedades {
@@ -586,8 +627,7 @@ ul{
     .btn-cuidados {  
         width: 100vw;
     }
-
-    
+  
     .row .precio {
         padding-left: 43%;
     }
@@ -723,11 +763,20 @@ ul{
         text-align: left;
         font-size: 0.4em;
     }
+
+    .naturaleza > div > h3 {
+        font-size: 50px;
+    }
         
 }
 
 
 @media (max-width: 350px) {
+
+    .naturaleza > div > h3 {
+        font-size: 30px;
+    }
+
     #perfumes {
         font-size: 1.5rem;
     }
