--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,12 @@
     font-size: 4em;
     margin-top: 4px;
     padding-right: 2rem;
+    transition: 0.5s;
 }
 
 .navbar {
     max-width: 100vw;
-    padding: 0 5%;
+    padding: 0;
 }
 
 .blancoFijo {
@@ -24,7 +25,6 @@
     transition: 0.6s ease-in;
     min-width: 100vw;
         position: fixed;
-    font-size: 1.1em;
     padding-bottom: 15px;
     display: flex;
     align-items: center;
@@ -34,9 +34,26 @@
     z-index: 0;
 }
 
+#blanco {
+    min-width: 100vw;
+        position: fixed;
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    gap: 25px 10px;
+    height: 20%;
+    padding: 0 40px;
+    z-index: 0;
+}
+
+.menuestilo {
+    font-size: 1.3em;
+}
+
 .blancoFijoMenu {
     display: contents;
     position: absolute;
+    /* font-size: 1em; */
 }
 
 .mdesplegado {
@@ -44,18 +61,19 @@
     display: flex;
     /* justify-content: center; */
     flex-wrap: wrap;
-    padding: 1em 0 3em 0;
+    padding: 0;
+    margin: 0;
     font-size: 3em;
 }
 
-.menuestilo {
+/* .menuestilo {
     display: flex;
     flex-direction: column;
     font-size: 0.7em;
     border-bottom: 1.5px rgb(4, 4, 4) solid;
     width: 90%;
     margin: auto;
-}
+} */
 
 .nav-item {
     text-align: center;
@@ -69,10 +87,16 @@
 
 .navbar-toggler {
     border: none;
+    transition: 0.6s ease;
 }
 
 .navbar-brand {
     margin-left: -1rem;
+    min-width: 100px;
+}
+
+.navbar-collapse {
+    transition: 1s ease-out;
 }
 
 
