--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ a:hover {
 
 #perfumes {
     color: rgb(29, 29, 29);
-    font-size: 4em;
+    font-size: 30px;
     margin-top: 4px;
     padding-right: 2rem;
     transition: 0.5s;
@@ -39,19 +39,14 @@ a:hover {
 }
 
 #blanco {
-    min-width: 100vw;
-        position: fixed;
-    padding-bottom: 15px;
-    display: flex;
-    align-items: center;
-    gap: 25px 10px;
-    height: 20%;
-    padding: 0 40px;
+    min-width: 99vw;
+    position: fixed; 
+    padding: 0 50px;
     z-index: 1;
 }
 
 .menuestilo {
-    font-size: 1.3em;
+    font-size: 50px;
 }
 
 .blancoFijoMenu {
@@ -62,11 +57,12 @@ a:hover {
 .mdesplegado {
     list-style: none;
     display: flex;
-    /* justify-content: center; */
+    flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
-    font-size: 3em;
+    font-size: 20px;
 }
 
 /* .menuestilo {
@@ -94,12 +90,15 @@ a:hover {
 }
 
 .navbar-brand {
-    margin-left: -1rem;
-    min-width: 100px;
+    min-width: 150px;
+    margin-top: 0;
+    padding-top: 0;
+    padding-right: 2rem;
 }
 
 .navbar-collapse {
     transition: 1s ease-out;
+    font-size: 30px;
 }
 
 
