--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a:hover {
 }
 
 .navbar {
-    max-width: 100vw;
+    width: 100px;
 }
 
 .blancoFijo {
@@ -62,14 +62,14 @@ a:hover {
     font-size: 20px;
 }
 
-/* .menuestilo {
+.menuestilo {
     display: flex;
     flex-direction: column;
     font-size: 0.7em;
     border-bottom: 1.5px rgb(4, 4, 4) solid;
     width: 90%;
     margin: auto;
-} */
+}
 
 .nav-item {
     text-align: center;
@@ -87,10 +87,14 @@ a:hover {
 }
 
 .navbar-brand {
-    min-width: 150px;
-    margin-top: 0;
-    padding-top: 0;
-    padding-right: 2rem;
+    padding: 0;
+    width: 300px;
+    margin: 0;
+}
+
+.d-inline-block.align-text-top {
+    margin: 0;
+    padding: 0;
 }
 
 .navbar-collapse {
